--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Parkettboden Biel – Kalkulator</title>
+  <title>Parkettboden Wien – Kalkulator</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -13,16 +13,23 @@
   </header>
 
   <main>
-    <h1>Parkettboden Biel</h1>
-    <section class="product-details">
-      <p><strong>Farbton:</strong> BIEL</p>
-      <p><strong>Ausführung:</strong> Eiche Classic gebürstet</p>
-      <p><strong>Format:</strong> 14 × 1900 × 190 mm</p>
-      <p><strong>Oberfläche:</strong> Hartwachs natur geölt</p>
-      <p><strong>Aufbau:</strong> Dreischichtparkett</p>
-      <p><strong>Profil:</strong> 1 Stab Landhausdiele, Click G5</p>
-      <p><strong>Nutzschicht:</strong> ca. 3 mm / halbe Dielen möglich</p>
-    </section>
+    <h1>Parkettboden Wien</h1>
+    <section class="product-details horizontal-layout">
+  <div class="product-text">
+    <p><strong>Farbton:</strong> WIEN</p>
+    <p><strong>Ausführung:</strong> Eiche gebürstet</p>
+    <p><strong>Herkunft:</strong> Europa</p>
+    <p><strong>Format:</strong> 14 × 2200 × 192 mm</p>
+    <p><strong>Oberfläche:</strong> Hartwachs Bone white geölt</p>
+    <p><strong>Sortierung:</strong> Rustikal, lebhaft, schwarz gespachtelt</p>
+    <p><strong>Aufbau:</strong> Dreischichtparkett</p>
+    <p><strong>Profil:</strong> 1 Stab Landhausdiele, Click G5</p>
+    <p><strong>Nutzschicht:</strong> ca. 3 mm</p>
+  </div>
+  <div class="product-image-wrapper">
+    <img src="Wien.png" alt="Parkettboden Wien" class="product-image" />
+  </div>
+</section>
 
     <div id="calculator"></div>
 
